<resources>
    <string name="app_name">TicTacToe</string>
    <string name="button"> </string>
    <string name="button_1"> </string>
    <string name="button_2"> </string>
    <string name="button_3"> </string>
    <string name="button_4"> </string>
    <string name="button_5"> </string>
    <string name="button_6"> </string>
    <string name="button_7"> </string>
    <string name="button_8"> </string>
</resources>
